--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,10 @@
         }
     },
     "require": {
-        "symfony/console": "^3.2",
-        "symfony/config": "^3.2",
-        "symfony/dependency-injection": "^3.2",
-        "symfony/dotenv": "^3.3@dev",
-        "symfony/filesystem": "^3.2",
-        "symfony/yaml": "^3.2",
-        "symfony/options-resolver": "^3.2"
+        "symfony/console": "^3.2|^4.0",
+        "symfony/config": "^3.2|^4.0",
+        "symfony/dependency-injection": "^3.2|^4.0",
+        "symfony/filesystem": "^3.2|^4.0",
+        "symfony/yaml": "^3.2|^4.0"
     }
 }
